force-app/main/default/objects/AnnualEmssnInventory/AnnualEmssnInventory.object-meta.xml
<CustomObject>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>