force-app/main/default/objects/AnnualEmssnInventory/fields/AEI_Approver__c.field-meta.xml
<CustomField>
    <fullName>AEI_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SB: Created for NZC Implementation &lt;US No:PhII_UC007_US07&gt; Purpose: This field is created to capture the user who will approve/reject the record.</description>
    <label>AEI Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Annual_Emissions_Inventories</relationshipName>
    <type>Lookup</type>
</CustomField>