force-app/main/default/objects/AnnualEmssnInventory/fields/AEI_Archival_Date__c.field-meta.xml
<CustomField>
    <fullName>AEI_Archival_Date__c</fullName>
    <description>Gives the archival date post 7 years and 30 days from the base year of that AEI</description>
    <formula>DATE(VALUE(TEXT(Year)), 1, 1) + VALUE($Label.NZC_AEI_7_years_plus_30_days_value)</formula>
    <label>AEI Archival Date</label>
    <type>Date</type>
</CustomField>