force-app/main/default/objects/AnnualEmssnInventory/fields/AEI_Data_Archival_Criteria_Check__c.field-meta.xml
<CustomField>
    <fullName>AEI_Data_Archival_Criteria_Check__c</fullName>
    <description>Formula field to check whether AEI is eligible for archival</description>
    <formula>TODAY() &gt;= AEI_Archival_Date__c</formula>
    <label>AEI Data Archival Criteria Check</label>
    <type>Checkbox</type>
</CustomField>