force-app/main/default/objects/AnnualEmssnInventory/fields/AEI_Email_Alert_Criteria_Check__c.field-meta.xml
<CustomField>
    <fullName>AEI_Email_Alert_Criteria_Check__c</fullName>
    <description>Formula field to check whether AEI is eligible for sending archival notification after 7 years from that AEI&apos;s base year</description>
    <formula>IF(
TODAY() &gt; (DATE(VALUE(TEXT(Year)), 1, 1) + VALUE($Label.NZC_AEI_7_years_days_value)),
TRUE,
FALSE
)</formula>
    <label>AEI Email Alert Criteria Check</label>
    <type>Checkbox</type>
</CustomField>