force-app/main/default/objects/AnnualEmssnInventory/fields/Archival_Notification_sent__c.field-meta.xml
<CustomField>
    <fullName>Archival_Notification_sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox which will get checked when the notification for archival for an AEI is send</description>
    <label>Archival Notification sent</label>
    <type>Checkbox</type>
</CustomField>