force-app/main/default/objects/AnnualEmssnInventory/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <description>SB: Created for NZC Implementation- This field is to capture the comments on Annual Emissions Inventory record page</description>
    <label>Comment</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>