force-app/main/default/objects/AnnualEmssnInventory/fields/Electricity_from_renewable_sources__c.field-meta.xml
<CustomField>
    <fullName>Electricity_from_renewable_sources__c</fullName>
    <label>Electricity from renewable sources</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>