force-app/main/default/objects/AnnualEmssnInventory/fields/Electricity_from_renewable_sources_India__c.field-meta.xml
<CustomField>
    <fullName>Electricity_from_renewable_sources_India__c</fullName>
    <description>SB: Created for NZC Implementation &lt;US NO&gt; Purpose: This field is to capture the electricity percentage from renewable sources</description>
    <label>Electricity from renewable sources India</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>