force-app/main/default/objects/AnnualEmssnInventory/fields/Energy_consumption_in_GJ_Sc_1_and_Sc_2__c.field-meta.xml
<CustomField>
    <fullName>Energy_consumption_in_GJ_Sc_1_and_Sc_2__c</fullName>
    <label>Energy consumption in GJ (Sc 1 and Sc 2)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>