force-app/main/default/objects/AnnualEmssnInventory/fields/Exclude_from_Archival__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_Archival__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox field if user wants to exclude his AEI from archival</description>
    <label>Exclude from Archival</label>
    <type>Checkbox</type>
</CustomField>