force-app/main/default/objects/AnnualEmssnInventory/fields/Final_Scope_1_Emissions_without_R22__c.field-meta.xml
<CustomField>
    <fullName>Final_Scope_1_Emissions_without_R22__c</fullName>
    <description>SB: Created for NZC Implementation &lt;US NO&gt; Purpose: This calculates the final scope 1 emission subtracting the R22 refrigerant</description>
    <formula>TotalScope1Emissions  -  Outside_of_scopes_R22_refrigerant__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This calculates the final scope 1 emission subtracting the R22 refrigerant</inlineHelpText>
    <label>Final Scope 1 Emissions without R22</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>