force-app/main/default/objects/AnnualEmssnInventory/fields/NZC_AEI_Archival_Comment__c.field-meta.xml
<CustomField>
    <fullName>NZC_AEI_Archival_Comment__c</fullName>
    <description>Logs archival comment when AEI is associated with Carbon Credit Allocation/ Emissions Reduction Targets or AEI&apos;s have associated child records locked</description>
    <label>Archival Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>