force-app/main/default/objects/AnnualEmssnInventory/fields/Outside_of_scopes_R22_refrigerant__c.field-meta.xml
<CustomField>
    <fullName>Outside_of_scopes_R22_refrigerant__c</fullName>
    <description>SB: Created for NZC Implementation &lt;US NO&gt; Purpose: This field is created to capture the total scope 1 emissions of all the associated stationary asset energy use</description>
    <label>Outside of scopes R22 refrigerant</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>