force-app/main/default/objects/AnnualEmssnInventory/fields/Scope_1_2_market_based_and_3__c.field-meta.xml
<CustomField>
    <fullName>Scope_1_2_market_based_and_3__c</fullName>
    <formula>Final_Scope_1_Emissions_without_R22__c +  TotScope2MarketBsdEmssn +  TotalScope3Emissions</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scope 1, 2 (market-based) and 3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>