force-app/main/default/objects/AnnualEmssnInventory/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>SB: Created as part of the user story PhII_UC007_US06
Purpose: To Capture the Status of the AEI</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
                <default>true</default>
                <label>Created</label>
            </value>
            <value>
                <fullName>Pending For Approval</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Revised</fullName>
            </value>
            <value>
                <fullName>submitted for approval</fullName>
                <isActive>false</isActive>
                <label>submitted for approval</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>