force-app/main/default/objects/AnnualEmssnInventory/fields/Total_Energy_Consumption_in_GJ__c.field-meta.xml
<CustomField>
    <fullName>Total_Energy_Consumption_in_GJ__c</fullName>
    <description>SB: Created for NZC Implementation &lt;US NO&gt; Purpose: This formula field is created to calculate the summation of energy Energy Usage in Data Centers (Kwh) and Energy Usage in Commercial Buildings (Kwh).</description>
    <formula>( EnergyUsageCommercialBld  +  EnergyUsageDataCenters ) * 0.0036</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Energy Consumption in GJ</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>