force-app/main/default/objects/AnnualEmssnInventory/validationRules/NZC_Block_Record_Updation_of_ESG_And_JLL.validationRule-meta.xml
<ValidationRule>
    <fullName>NZC_Block_Record_Updation_of_ESG_And_JLL</fullName>
    <active>false</active>
    <description>CJ: Created as part of NZC Phase 2 implementation.
Purpose: To restrict the ESG and Data Modeller to edit the annual emission inventory record.</description>
    <errorConditionFormula>AND(
NOT( ISNEW() ) ,
(ISPICKVAL( $User.User_Type__c , &apos;ESG Team&apos;) || ISPICKVAL( $User.User_Type__c , &apos;Data Modeller&apos;)
))</errorConditionFormula>
    <errorMessage>You Don&apos;t Have Permission to Edit This Record</errorMessage>
</ValidationRule>